# old

HOADIS/: README  build.xml
HOADIS/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml  rest-build.xml
HOADIS/nbproject/private/: private.properties
HOADIS/src/java/HOADIS/: Utils.java
HOADIS/web/: ShowEvent.jsp  index.jsp  table.html  try.html
HOADIS/web/Theme/: main.css
HOADIS/web/WEB-INF/: sun-web.xml  web.xml
HOADIS/web/WEB-INF/Academics/: Attendance.jsp  EditSubject.jsp  SelectAttendanceSubject.jsp  SelectSubject.jsp  UpdateSubject.jsp
HOADIS/web/WEB-INF/Error/: DBError.jsp  NotUploaded.jsp  Unauthorised.jsp
HOADIS/web/WEB-INF/Event/: AddEvent.jsp  Event.jsp  NoticeBoard.jsp
HOADIS/web/WEB-INF/MicroBlog/: AddGupShup.jsp  GupShup.jsp
HOADIS/web/WEB-INF/Profile/: EditAProfile.jsp  EditFProfile.jsp  EditSProfile.jsp  UpdateAProfile.jsp  UpdateFProfile.jsp  UpdateSProfile.jsp  UploadPhoto.jsp
HOADIS/web/WEB-INF/Result/: Result.jsp  ViewResult.jsp
HOADIS/web/WEB-INF/TimeTable/: EditTimeTable.jsp  SelectTimeTableYear.jsp  ViewTimeTable.jsp
HOADIS/web/WEB-INF/Upload/: Assignment.jsp  Courseware.jsp  DownloadCourseware.jsp
HOADIS/web/WEB-INF/UserAuthentication/: Home.jsp  LoginForm.jsp  RegisterForm.jsp  TooManyTries.jsp
HOADIS/web/WEB-INF/parts/: ShowError.jsp  footer.html  head.html  header.html  header.jsp  sidenav.jsp  topnav.jsp
IceCuBe/: IceMake-mac.sh  icon.xpm  main.cpp  main.h  mainframe.cpp  mainframe.h  png.h  server.cpp  server.h  splash.cpp  splash.h  statusbar.cpp  statusbar.h
autoqt/: INSTALL  README  autoqt  bootstrap  configure.ac
autoqt/src/: Makefile.am  autoqt.cpp
bluweb/: bluweb.sln
bluweb/src/: bluweb.csproj  bluweb_temporarykey.pfx  form1.cs  form1.resx  form1designer.cs
bluweb/src/properties/: assemblyinfo.cs  resourcesdesigner.cs  settingsdesigner.cs
graffiti/: .gitignore  AUTHORS  CMakeLists.txt  COPYING  INSTALL  INSTALL.win32  README  THANKS  resources.qrc
graffiti/cmake/: DpkgBuild.cmake  config.h.cmake  graffiti.sh  icon.rc  toolchain-win32.cmake
graffiti/contribs/: contribs.sh
graffiti/debian/: changelog  control  copyright  rules
graffiti/doc/: codenames.txt
graffiti/nsis/: CMakeLists.txt  installer.nsi
graffiti/share/: graffiti.desktop  graffiti.icns
graffiti/src/: CMakeLists.txt  chatdialog.cpp  chatdialog.h  client.cpp  client.h  connection.cpp  connection.h  gingerthread.cpp  gingerthread.h  graffiti.pro  oliveinterface.cpp  oliveinterface.h  peermanager.cpp  peermanager.h  server.cpp  server.h
graffiti/src/Gui/: MainWindow.ui
graffiti/src/Main/: main.cpp
graffiti/src/Whiteboard/: graffiti.cpp  graffiti.h  graffitiarea.cpp  graffitiarea.h  graffitireader.cpp  graffitireader.h  graffitiwriter.cpp  graffitiwriter.h  preview.cpp  preview.h
graffiti/ts/: CMakeLists.txt
gtkmoo/: .gitignore  CMakeLists.txt  HACKING  NEWS  README  gtkmoo_2.0~natty_amd64.deb  gtkmoo_2.0~natty_i386.deb
gtkmoo/cmake/: gtkmoo.sh
gtkmoo/contribs/: contribs.sh
gtkmoo/debian/: changelog  control  copyright  rules
gtkmoo/nsis/: CMakeLists.txt  installer.nsi
gtkmoo/share/: gtkmoo.desktop
gtkmoo/src/: CMakeLists.txt  Makefile  carousel.h  main.cpp  mooAbout.cpp  mooAbout.h  mooGame.cpp  mooGame.h  mooGuessTable.cpp  mooGuessTable.h  mooGui.cpp  mooGui.h  mooInputBox.cpp  mooInputBox.h  mooLevel.cpp  mooLevel.h  mooMenuBar.cpp  mooMenuBar.h  mooRules.cpp  mooRules.h  mooStatusBar.cpp  mooStatusBar.h  mooToolBar.cpp  mooToolBar.h
iStudio/: AboutBox1.cs  Readme.rtf
libishare/: README
quizapp/: Gemfile  README
quizapp/app/controllers/: courses_controller.rb  pages_controller.rb  questions_controller.rb  quizzes_controller.rb  sessions_controller.rb  submissions_controller.rb  users_controller.rb
quizapp/app/helpers/: sessions_helper.rb
quizapp/app/models/: course.rb  question.rb  quiz.rb  user.rb
quizapp/app/views/courses/: _form.html.erb  index.html.erb  show.html.erb
quizapp/app/views/layouts/: application.html.erb
quizapp/app/views/pages/: about.html.erb  help.html.erb  home.html.erb
quizapp/app/views/questions/: _form.html.erb  edit.html.erb  new.html.erb  show.html.erb
quizapp/app/views/quizzes/: _form.html.erb  edit.html.erb  new.html.erb  show.html.erb
quizapp/app/views/sessions/: new.html.erb
quizapp/app/views/submissions/: index.html.erb
quizapp/app/views/users/: _form.html.erb  edit.html.erb  index.html.erb  new.html.erb  show.html.erb
quizapp/config/: application.rb  routes.rb
quizapp/config/initializers/: secret_token.rb
quizapp/db/: sample-quiz-input.txt  sample-quiz-input2.txt  schema.rb  seeds.rb
quizapp/db/migrate/: 20110918180235_create_users.rb  20110921013222_create_quizzes.rb  20110921013231_create_questions.rb  20110921013238_create_submissions.rb
quizapp/public/javascripts/: application.js
quizapp/public/stylesheets/: bootstrap.css  main.css
quizapp/test/fixtures/: questions.yml  quizzes.yml  submissions.yml  users.yml
scuttlebutt/: CustomLoader.as  Readme.txt  ScuttleButt-app.xml  ScuttleButt.mxml  cert.p12  settings.xml
scuttlebutt/assets/: License.txt  beatwidget.swf  fonts.swf
scuttlebutt/assets/css/: dark.css  light.css
scuttlebutt/com/scuttlebutt/events/: XMLFileServiceEvent.as
scuttlebutt/com/scuttlebutt/managers/: AppManager.as  FileManager.as  NetworkManager.as  UsersManager.as  WindowManager.as
scuttlebutt/com/scuttlebutt/model/: ChatMessage.as  ChatWindow.as  Settings.as  User.as
scuttlebutt/com/scuttlebutt/services/: AvatarLoader.as  XMLFileService.as
scuttlebutt/com/scuttlebutt/update/: UpdateUI.mxml
scuttlebutt/com/scuttlebutt/utils/: AvatarUtil.as  Notification.as  ResourceUtil.as  (+1 more)
scuttlebutt/libs/: CustomPreLoader.swc
scuttlebutt/shots/: 1a.tiff  2a.tiff  5a.tiff  5b.tiff  5c.tiff  5d.tiff  5e.tiff  5f.tiff  6a.tiff  notification.tiff  shot.tiff
vlc-minimode/: 0001-MiniModeSvgs.patch  0002-Restructured-File-Paths.patch  0003-Minimode-added-to-Main-Interface.patch  0004-Minimode-Widget.patch  0005-Add-QtSVG-dependancy.patch  0006-Add-QtSvg-Dependancy-in-CMake.patch
(+55 files in other folders)
